// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: invalid settings 1`] = `
<Fragment>
  <CreateProjectPageHeader
    title={
      <span
        className="text-middle"
      >
        <img
          alt=""
          className="spacer-right"
          height="24"
          src="/images/alm/gitlab.svg"
        />
        onboarding.create_project.gitlab.title
      </span>
    }
  />
  <PersonalAccessTokenForm
    almSetting={
      Object {
        "alm": "gitlab",
        "key": "key",
      }
    }
    onPersonalAccessTokenCreated={[MockFunction]}
    resetPat={false}
  />
</Fragment>
`;

exports[`should render correctly: invalid settings, admin user 1`] = `
<Fragment>
  <CreateProjectPageHeader
    title={
      <span
        className="text-middle"
      >
        <img
          alt=""
          className="spacer-right"
          height="24"
          src="/images/alm/gitlab.svg"
        />
        onboarding.create_project.gitlab.title
      </span>
    }
  />
  <PersonalAccessTokenForm
    almSetting={
      Object {
        "alm": "gitlab",
        "key": "key",
      }
    }
    onPersonalAccessTokenCreated={[MockFunction]}
    resetPat={false}
  />
</Fragment>
`;

exports[`should render correctly: loading 1`] = `
<Fragment>
  <CreateProjectPageHeader
    title={
      <span
        className="text-middle"
      >
        <img
          alt=""
          className="spacer-right"
          height="24"
          src="/images/alm/gitlab.svg"
        />
        onboarding.create_project.gitlab.title
      </span>
    }
  />
  <div
    className="display-flex-column huge-spacer-bottom"
  >
    <label
      className="spacer-bottom"
      htmlFor="alm-config-selector"
    >
      alm.configuration.selector.label
    </label>
    <AlmSettingsInstanceSelector
      classNames="abs-width-400"
      initialValue="key"
      inputId="alm-config-selector"
      instances={
        Array [
          Object {
            "alm": "gitlab",
            "key": "key",
          },
          Object {
            "alm": "gitlab",
            "key": "key",
          },
          Object {
            "alm": "github",
            "key": "key",
          },
        ]
      }
      onChange={[MockFunction]}
    />
  </div>
  <i
    className="spinner"
  />
</Fragment>
`;

exports[`should render correctly: pat form 1`] = `
<Fragment>
  <CreateProjectPageHeader
    title={
      <span
        className="text-middle"
      >
        <img
          alt=""
          className="spacer-right"
          height="24"
          src="/images/alm/gitlab.svg"
        />
        onboarding.create_project.gitlab.title
      </span>
    }
  />
  <div
    className="display-flex-column huge-spacer-bottom"
  >
    <label
      className="spacer-bottom"
      htmlFor="alm-config-selector"
    >
      alm.configuration.selector.label
    </label>
    <AlmSettingsInstanceSelector
      classNames="abs-width-400"
      initialValue="key"
      inputId="alm-config-selector"
      instances={
        Array [
          Object {
            "alm": "gitlab",
            "key": "key",
          },
          Object {
            "alm": "gitlab",
            "key": "key",
          },
          Object {
            "alm": "github",
            "key": "key",
          },
        ]
      }
      onChange={[MockFunction]}
    />
  </div>
  <PersonalAccessTokenForm
    almSetting={
      Object {
        "alm": "gitlab",
        "key": "key",
      }
    }
    onPersonalAccessTokenCreated={[MockFunction]}
    resetPat={false}
  />
</Fragment>
`;

exports[`should render correctly: project selection form 1`] = `
<Fragment>
  <CreateProjectPageHeader
    title={
      <span
        className="text-middle"
      >
        <img
          alt=""
          className="spacer-right"
          height="24"
          src="/images/alm/gitlab.svg"
        />
        onboarding.create_project.gitlab.title
      </span>
    }
  />
  <div
    className="display-flex-column huge-spacer-bottom"
  >
    <label
      className="spacer-bottom"
      htmlFor="alm-config-selector"
    >
      alm.configuration.selector.label
    </label>
    <AlmSettingsInstanceSelector
      classNames="abs-width-400"
      initialValue="key"
      inputId="alm-config-selector"
      instances={
        Array [
          Object {
            "alm": "gitlab",
            "key": "key",
          },
          Object {
            "alm": "gitlab",
            "key": "key",
          },
          Object {
            "alm": "github",
            "key": "key",
          },
        ]
      }
      onChange={[MockFunction]}
    />
  </div>
  <GitlabProjectSelectionForm
    loadingMore={false}
    onImport={[MockFunction]}
    onLoadMore={[MockFunction]}
    onSearch={[MockFunction]}
    projectsPaging={
      Object {
        "pageIndex": 1,
        "pageSize": 30,
        "total": 0,
      }
    }
    searchQuery=""
    searching={false}
  />
</Fragment>
`;
